@@ -1,20 +1,37 @@
 package com.CompusLink.CompusLink.domain.colocation.service;
 
-import com.CompusLink.CompusLink.domain.colocation.dto.*;
-import com.CompusLink.CompusLink.domain.colocation.model.*;
-import com.CompusLink.CompusLink.domain.colocation.repository.*;
-import com.CompusLink.CompusLink.exception.*; // Task 1.2
-import jakarta.transaction.Transactional;
-import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
+
+import com.CompusLink.CompusLink.domain.colocation.dto.ColocAmenityDTO;
+import com.CompusLink.CompusLink.domain.colocation.dto.ColocImageDTO;
+import com.CompusLink.CompusLink.domain.colocation.dto.ColocPostDTO;
+import com.CompusLink.CompusLink.domain.colocation.model.ColocAmenity;
+import com.CompusLink.CompusLink.domain.colocation.model.ColocImage;
+import com.CompusLink.CompusLink.domain.colocation.model.ColocInterest;
+import com.CompusLink.CompusLink.domain.colocation.model.ColocPost;
+import com.CompusLink.CompusLink.domain.colocation.model.ColocStatus;
+import com.CompusLink.CompusLink.domain.colocation.model.HousingType;
+import com.CompusLink.CompusLink.domain.colocation.model.InterestStatus;
+import com.CompusLink.CompusLink.domain.colocation.repository.ColocAmenityRepository;
+import com.CompusLink.CompusLink.domain.colocation.repository.ColocImageRepository;
+import com.CompusLink.CompusLink.domain.colocation.repository.ColocInterestRepository;
+import com.CompusLink.CompusLink.domain.colocation.repository.ColocPostRepository;
+import com.CompusLink.CompusLink.exception.AccessDeniedException;
+import com.CompusLink.CompusLink.exception.BusinessRuleException;
+import com.CompusLink.CompusLink.exception.DuplicateResourceException;
+import com.CompusLink.CompusLink.exception.EntityNotFoundException;
+
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
@@ -27,36 +44,59 @@ public class ColocPostService {
     private final ColocAmenityRepository amenityRepository;
     private final ColocFileStorageService fileStorageService;
 
-    // --- Task 5.3: Publier un post ---
+    // --- Task 5.3: Publier un post (Optimisé) ---
     public ColocPostDTO createPost(ColocPostDTO request, UUID posterId) {
         ColocPost post = ColocPost.builder()
                 .posterId(posterId)
-                .title(request.title())
-                .description(request.description())
-                .city(request.city())
-                .address(request.address())
-                .startDate(request.startDate())
-                .spotsNeeded(request.spotsNeeded())
+                .title(request.getTitle())
+                .description(request.getDescription())
+                .city(request.getCity())
+                .address(request.getAddress())
+                .startDate(request.getStartDate())
+                .spotsNeeded(request.getSpotsNeeded())
                 .spotsConfirmed(0)
-                .housingType(request.housingType())
-                .rentPerPerson(request.rentPerPerson())
-                .furnished(request.furnished())
+                .housingType(request.getHousingType())
+                .rentPerPerson(request.getRentPerPerson())
+                .furnished(request.getFurnished())
                 .status(ColocStatus.OPEN)
                 .build();
 
         ColocPost saved = postRepository.save(post);
 
+        List<ColocAmenityDTO> savedAmenities = new ArrayList<>();
         // Équipements optionnels
-        if (request.amenities() != null) {
-            request.amenities().forEach(amenityDto -> 
-                amenityRepository.save(ColocAmenity.builder()
-                    .post(saved)
-                    .amenityType(amenityDto.amenityType())
-                    .build())
-            );
+        if (request.getAmenities() != null) {
+            request.getAmenities().forEach(amenityDto -> {
+                ColocAmenity amenity = amenityRepository.save(ColocAmenity.builder()
+                        .post(saved)
+                        .amenityType(amenityDto.amenityType())
+                        .build());
+                savedAmenities.add(new ColocAmenityDTO(amenity.getId(), amenity.getAmenityType()));
+            });
         }
 
-        return getPostDetails(saved.getId(), posterId);
+        // On évite getPostDetails immédiat pour des raisons de performance et de cycle de vie de transaction
+        return new ColocPostDTO(
+                saved.getId(),
+                saved.getPosterId(),
+                saved.getTitle(),
+                saved.getDescription(),
+                saved.getCity(),
+                saved.getAddress(),
+                saved.getStartDate(),
+                saved.getSpotsNeeded(),
+                saved.getSpotsConfirmed(),
+                saved.getHousingType(),
+                saved.getRentPerPerson(),
+                saved.getFurnished(),
+                saved.getStatus(),
+                null, // Pas encore de cover
+                0L, // 0 intérêt total
+                0L, // 0 intérêt en attente
+                savedAmenities,
+                List.of(),
+                saved.getCreatedAt()
+        );
     }
 
     // --- Task 5.3: Lister les posts (Filtrage & Pagination) ---
@@ -65,61 +105,84 @@ public class ColocPostService {
                 .map(this::toSummaryDTO);
     }
 
-    // --- Task 5.3: Voir le détail ---
+    // --- Task 5.3: Voir le détail (Sécurisé contre les NullPointer) ---
     public ColocPostDTO getPostDetails(UUID id, UUID currentUserId) {
         ColocPost post = postRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Post non trouvé"));
 
         long totalInterests = interestRepository.countByPostId(id);
         
-        // Règle métier : -1 pour les non-posteurs, sinon le compte réel
-        long pendingInterests = post.getPosterId().equals(currentUserId) 
+        // CORRECTION : Utilisation de Objects.equals pour supporter le mode déconnecté (currentUserId == null)
+        long pendingInterests = java.util.Objects.equals(post.getPosterId(), currentUserId)
                 ? interestRepository.countByPostIdAndStatus(id, InterestStatus.PENDING) 
                 : -1;
 
-        return toFullDTO(post, totalInterests, (int)pendingInterests);
+        return toFullDTO(post, totalInterests, (int) pendingInterests);
     }
 
     // --- Task 5.3: Gestion des places (Logique FULL/OPEN automatique) ---
     public void updateSpotsConfirmed(UUID postId, int count, UUID currentUserId) {
-        ColocPost post = postRepository.findById(postId).orElseThrow();
+        ColocPost post = postRepository.findById(postId)
+                .orElseThrow(() -> new EntityNotFoundException("Post non trouvé"));
         
-        if (!post.getPosterId().equals(currentUserId)) throw new AccessDeniedException("Accès refusé");
-        if (count < 0 || count > post.getSpotsNeeded()) throw new BusinessRuleException("Nombre de places invalide");
+        if (!java.util.Objects.equals(post.getPosterId(), currentUserId)) {
+            throw new AccessDeniedException("Accès refusé : Vous n'êtes pas l'auteur de cette annonce");
+        }
+        if (count < 0 || count > post.getSpotsNeeded()) {
+            throw new BusinessRuleException("Nombre de places spécifié invalide");
+        }
 
         post.setSpotsConfirmed(count);
 
         if (count >= post.getSpotsNeeded()) {
             post.setStatus(ColocStatus.FULL);
-        } else if (post.getStatus() == ColocStatus.FULL) {
+        } else {
             post.setStatus(ColocStatus.OPEN);
         }
         
         postRepository.save(post);
     }
 
-    // --- Task 5.3: Intérêts (Acceptation avec atomicité) ---
+    // --- Task 5.3: Intérêts (Acceptation avec atomicité préservée) ---
     public void handleInterestStatus(UUID interestId, InterestStatus newStatus, UUID currentUserId) {
-        ColocInterest interest = interestRepository.findById(interestId).orElseThrow();
-        ColocPost post = postRepository.findById(interest.getPostId()).orElseThrow();
+        ColocInterest interest = interestRepository.findById(interestId)
+                .orElseThrow(() -> new EntityNotFoundException("Demande d'intérêt non trouvée"));
+        ColocPost post = postRepository.findById(interest.getPostId())
+                .orElseThrow(() -> new EntityNotFoundException("Post associé non trouvé"));
 
-        if (!post.getPosterId().equals(currentUserId)) throw new AccessDeniedException("Non autorisé");
-        if (newStatus == InterestStatus.PENDING) throw new BusinessRuleException("Retour à PENDING impossible");
+        if (!java.util.Objects.equals(post.getPosterId(), currentUserId)) {
+            throw new AccessDeniedException("Non autorisé à modifier cette demande");
+        }
+        if (newStatus == InterestStatus.PENDING) {
+            throw new BusinessRuleException("Retour au statut PENDING impossible");
+        }
 
         interest.setStatus(newStatus);
         interestRepository.save(interest);
 
         if (newStatus == InterestStatus.ACCEPTED) {
-            updateSpotsConfirmed(post.getId(), post.getSpotsConfirmed() + 1, currentUserId);
+            // Modification directe pour éviter un findById redondant
+            int currentConfirmed = post.getSpotsConfirmed();
+            if (currentConfirmed < post.getSpotsNeeded()) {
+                post.setSpotsConfirmed(currentConfirmed + 1);
+                if (post.getSpotsConfirmed() >= post.getSpotsNeeded()) {
+                    post.setStatus(ColocStatus.FULL);
+                }
+                postRepository.save(post);
+            } else {
+                throw new BusinessRuleException("Toutes les places de cette colocation ont déjà été confirmées.");
+            }
         }
     }
 
     // --- Task 5.3: Gestion des photos ---
     public void uploadPhoto(UUID postId, MultipartFile file, boolean isCover, UUID requesterId) {
         ColocPost post = postRepository.findById(postId).orElseThrow();
-        if (!post.getPosterId().equals(requesterId)) throw new AccessDeniedException("Non autorisé");
+        if (!java.util.Objects.equals(post.getPosterId(), requesterId))
+            throw new AccessDeniedException("Non autorisé");
         
-        if (imageRepository.countByPostId(postId) >= 10) throw new BusinessRuleException("Limite de 10 photos");
+        if (imageRepository.countByPostId(postId) >= 10)
+            throw new BusinessRuleException("Limite de 10 photos atteinte");
 
         String url = fileStorageService.store(file);
         
@@ -137,86 +200,97 @@ public class ColocPostService {
                 .build());
     }
 
+    // --- Task 5.3: Exprimer son intérêt ---
+    public void expressInterest(UUID postId, String message, UUID userId) {
+        ColocPost post = postRepository.findById(postId)
+                .orElseThrow(() -> new EntityNotFoundException("Post non trouvé"));
+
+        if (post.getStatus() != ColocStatus.OPEN) {
+            throw new BusinessRuleException("L'annonce n'est plus ouverte aux candidatures");
+        }
+        if (java.util.Objects.equals(post.getPosterId(), userId)) {
+            throw new BusinessRuleException("Vous ne pouvez pas postuler à votre propre annonce");
+        }
+        if (interestRepository.existsByPostIdAndUserId(postId, userId)) {
+            throw new DuplicateResourceException("Vous avez déjà exprimé votre intérêt pour ce logement");
+        }
+
+        ColocInterest interest = ColocInterest.builder()
+                .postId(postId)
+                .userId(userId)
+                .message(message)
+                .status(InterestStatus.PENDING)
+                .build();
+
+        interestRepository.save(interest);
+    }
+
     // --- Mappers Internes ---
     private ColocPostDTO toFullDTO(ColocPost post, long total, int pending) {
-    return ColocPostDTO.builder()
-            .id(post.getId())
-            .posterId(post.getPosterId()) // Ajouté
-            .title(post.getTitle())
-            .description(post.getDescription()) // Ajouté
-            .city(post.getCity())
-            .address(post.getAddress()) // Ajouté
-            .startDate(post.getStartDate()) // Ajouté
-            .spotsNeeded(post.getSpotsNeeded())
-            .spotsConfirmed(post.getSpotsConfirmed())
-            .housingType(post.getHousingType()) // Ajouté
-            .rentPerPerson(post.getRentPerPerson()) // Ajouté
-            .furnished(post.getFurnished()) // Ajouté
-            .status(post.getStatus())
-            .pendingInterests((long)pending)
-            .totalInterests(total)
-            .images(imageRepository.findByPostOrderByPriority(post).stream()
-                    .map(i -> new ColocImageDTO(i.getId(), i.getUrl(), i.getSortOrder(), i.getIsCover()))
-                    .toList())
-            .createdAt(post.getCreatedAt()) // Ajouté si présent dans l'entité
-            .build();
-}
+        List<ColocAmenityDTO> amenities = amenityRepository.findByPost(post).stream()
+                .map(a -> new ColocAmenityDTO(a.getId(), a.getAmenityType()))
+                .collect(Collectors.toList());
+
+        List<ColocImageDTO> images = imageRepository.findByPostOrderByPriority(post).stream()
+                .map(i -> new ColocImageDTO(i.getId(), i.getUrl(), i.getSortOrder(), i.getIsCover()))
+                .toList();
+
+        String cover = imageRepository.findByPostAndIsCoverTrue(post)
+                .map(ColocImage::getUrl)
+                .orElse(null);
+
+        return new ColocPostDTO(
+                post.getId(),
+                post.getPosterId(),
+                post.getTitle(),
+                post.getDescription(),
+                post.getCity(),
+                post.getAddress(),
+                post.getStartDate(),
+                post.getSpotsNeeded(),
+                post.getSpotsConfirmed(),
+                post.getHousingType(),
+                post.getRentPerPerson(),
+                post.getFurnished(),
+                post.getStatus(),
+                cover,
+                total,
+                (long) pending,
+                amenities,
+                images,
+                post.getCreatedAt()
+        );
+    }
 
     private ColocPostDTO toSummaryDTO(ColocPost post) {
-    // Récupération de l'URL de la photo de couverture
-    String cover = imageRepository.findByPostAndIsCoverTrue(post)
-            .map(ColocImage::getUrl)
-            .orElse(null);
+        String cover = imageRepository.findByPostAndIsCoverTrue(post)
+                .map(ColocImage::getUrl)
+                .orElse(null);
 
-    // Récupération de la liste des types d'équipements pour le résumé
-    List<ColocAmenityDTO> amenities = amenityRepository.findByPost(post).stream()
-            .map(a -> new ColocAmenityDTO(a.getId(), a.getAmenityType()))
-            .collect(Collectors.toList());
+        List<ColocAmenityDTO> amenities = amenityRepository.findByPost(post).stream()
+                .map(a -> new ColocAmenityDTO(a.getId(), a.getAmenityType()))
+                .collect(Collectors.toList());
 
-    // Construction du DTO avec tous les champs requis par la Task 5.1
-    return ColocPostDTO.builder()
-            .id(post.getId())
-            .title(post.getTitle())
-            .city(post.getCity())
-            .housingType(post.getHousingType()) // Ajouté pour le résumé
-            .rentPerPerson(post.getRentPerPerson()) // Ajouté pour le résumé
-            .furnished(post.getFurnished()) // Ajouté pour le résumé
-            .spotsNeeded(post.getSpotsNeeded()) // Places cherchées
-            .spotsConfirmed(post.getSpotsConfirmed()) // Places confirmées
-            .status(post.getStatus())
-            .coverUrl(cover) // URL de la cover
-            .amenities(amenities) // Liste des équipements
-            .createdAt(post.getCreatedAt()) // Date de création pour le tri
-            .posterId(post.getPosterId())
-            .build();
-}
-
-        // À ajouter dans ColocPostService.java
-@Transactional
-public void expressInterest(UUID postId, String message, UUID userId) {
-    // 1. Vérifier que le post existe
-    ColocPost post = postRepository.findById(postId)
-            .orElseThrow(() -> new EntityNotFoundException("Post non trouvé"));
-
-    // 2. Vérifier les règles métier (Task 5.3)
-    if (post.getStatus() != ColocStatus.OPEN) {
-        throw new BusinessRuleException("L'annonce n'est plus ouverte");
+        return new ColocPostDTO(
+                post.getId(),
+                post.getPosterId(),
+                post.getTitle(),
+                null,
+                post.getCity(),
+                null,
+                null,
+                post.getSpotsNeeded(),
+                post.getSpotsConfirmed(),
+                post.getHousingType(),
+                post.getRentPerPerson(),
+                post.getFurnished(),
+                post.getStatus(),
+                cover,
+                null,
+                null,
+                amenities,
+                null,
+                post.getCreatedAt()
+        );
     }
-    if (post.getPosterId().equals(userId)) {
-        throw new BusinessRuleException("Vous ne pouvez pas postuler à votre propre annonce");
-    }
-    if (interestRepository.existsByPostIdAndUserId(postId, userId)) {
-        throw new DuplicateResourceException("Vous avez déjà exprimé votre intérêt pour ce post");
-    }
-
-    // 3. Créer et sauvegarder l'intérêt
-    ColocInterest interest = ColocInterest.builder()
-            .postId(postId)
-            .userId(userId)
-            .message(message)
-            .status(InterestStatus.PENDING)
-            .build();
-            
-    interestRepository.save(interest);
-}
 }
